[gd_scene load_steps=2 format=3 uid="uid://csxqh5fw5xrjf"]

[ext_resource type="Script" uid="uid://dhxny6055yube" path="res://scenes/battle_scene/ui/target_select/target_select.gd" id="1_w1vxb"]

[node name="TargetSelect" type="HBoxContainer"]
size_flags_vertical = 4
script = ExtResource("1_w1vxb")

[node name="LeftButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "<-"

[node name="TargetButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Target"

[node name="RightButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "->"
